feat: sanitize template with placeholders (names, links, assets, metadata)

--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "chanhdai.com",
+  "name": "portfolio-starter",
   "version": "0.1.0",
   "description": "A minimal portfolio, component registry, and blog.",
-  "homepage": "https://chanhdai.com",
+  "homepage": "https://example.com",
   "license": "MIT",
   "author": {
-    "name": "Nguyen Chanh Dai",
-    "email": "dai@chanhdai.com",
-    "url": "https://github.com/ncdai"
+    "name": "Your Name",
+    "email": "hello@example.com",
+    "url": "https://github.com/your-handle"
   },
-  "contributors": [
-    {
-      "name": "Nguyen Chanh Dai",
-      "email": "dai@chanhdai.com",
-      "url": "https://github.com/ncdai"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ncdai/chanhdai.com.git"
-  },
+  "contributors": [],
+  "repository": {},
   "scripts": {
     "dev": "next dev -p 1408 --turbopack",
     "build": "next build --turbopack",
