--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "repository": {},
   "scripts": {
     "dev": "next dev -p 1408 --turbopack",
-    "build": "next build --turbopack",
+    "build": "GITHUB_PAGES=false next build --turbopack",
+    "export": "GITHUB_PAGES=true next build",
     "start": "next start",
-    "preview": "next build --turbopack && next start -p 1408",
+    "preview": "GITHUB_PAGES=false next build --turbopack && next start -p 1408",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "check-types": "tsc --noEmit --pretty",
