ci: ensure pnpm is installed in workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           version: 9
 
+      - name: Install pnpm (fallback)
+        run: npm install -g pnpm
+
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
